--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
     "reset.css": "^2.0.2",
     "sass": "^1.60.0",
     "vite-plugin-svgr": "^2.4.0"
