--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "start": "npm run server & npm run dev"
   },
   "dependencies": {
+    "@chakra-ui/system": "^2.3.0",
+    "@chakra-ui/toast": "^4.0.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "framer-motion": "^7.6.2",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
